[profile.release]
panic = 'unwind'

[workspace]
members = [
	'node',
	'pallets/*',
	'rpc/nonce',
	'runtime',
]

[patch."https://github.com/mangata-finance/mangata-node"]
pallet-xyk = { path = "./pallets/xyk" }
mangata-primitives = {path = "./primitives/mangata"}
pallet-issuance = { path = "./pallets/issuance" }

[patch."https://github.com/mangata-finance/moonbeam"]
parachain-staking =  { git = "https://github.com/mangata-finance//moonbeam.git", branch = "feature/council-as-staking-fallback" }

[patch."https://github.com/mangata-finance/crowdloan-rewards"]
pallet-crowdloan-rewards = { git = "https://github.com/mangata-finance//crowdloan-rewards.git", branch = "feature/issuance-vesting-crowdloan" }

[patch."https://github.com/mangata-finance/open-runtime-module-library"]
orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xtokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xcm-support = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-unknown-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xcm = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }

[patch."https://github.com/paritytech/substrate"]
sp-debug-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-tasks = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-panic-handler = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-database = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-npos-elections = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-serializer = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-version = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-wasm-interface = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
beefy-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-consensus-vrf = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-finality-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-allocator = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-rpc-server = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-network-gossip = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-state-db = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-client-db = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-basic-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
# sc-basic-authorship-ver = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-light = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-utils = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
beefy-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
beefy-gadget-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-uncles = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-informant = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-finality-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-peerset = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
fork-tree = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-mmr-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-identity = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-membership = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-offences = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-nicks = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-im-online = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-sudo = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-support-procedural = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
beefy-merkle-tree = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-vesting = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-democracy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-treasury = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-indices = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-tips = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-scheduler = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-proxy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }
pallet-multisig = { git = "https://github.com/mangata-finance/substrate", branch = "feature/council-as-staking-fallback" }

# [patch."https://github.com/mangata-finance/cumulus"]
# cumulus-client-cli = { path = "../cumulus/client/cli" }
# cumulus-client-collator = { path = "../cumulus/client/collator" }
# cumulus-client-consensus-aura = { path = "../cumulus/client/consensus/aura" }
# cumulus-client-consensus-common = { path = "../cumulus/client/consensus/common" }
# cumulus-client-network = { path = "../cumulus/client/network" }
# cumulus-client-service = { path = "../cumulus/client/service" }
# cumulus-pallet-aura-ext = { path = "../cumulus/pallets/aura-ext" }
# cumulus-pallet-dmp-queue = { path = "../cumulus/pallets/dmp-queue" }
# cumulus-pallet-parachain-system = { path = "../cumulus/pallets/parachain-system" }
# cumulus-pallet-xcm = { path = "../cumulus/pallets/xcm" }
# cumulus-pallet-xcmp-queue = { path = "../cumulus/pallets/xcmp-queue" }
# cumulus-primitives-core = { path = "../cumulus/primitives/core" }
# cumulus-primitives-parachain-inherent = { path = "../cumulus/primitives/parachain-inherent" }
# cumulus-primitives-timestamp = { path = "../cumulus/primitives/timestamp" }
# cumulus-primitives-utility = { path = "../cumulus/primitives/utility" }
# parachain-info = { path = "../cumulus/polkadot-parachains/pallets/parachain-info" }

[patch."https://github.com/mangata-finance/substrate"]
pallet-authorship = {git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-bags-list = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-transaction-payment = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-try-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-system = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-membership = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-benchmarking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-identity = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-session = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-bounties = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-balances = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-tips = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-beefy-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
beefy-merkle-tree = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-scheduler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-multisig = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-executive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-im-online = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-treasury = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-utility = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-sudo = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-offences = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-democracy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-election-provider-support = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-collective = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-mmr-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-support = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-support-procedural-tools = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-support-procedural = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-nicks = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-staking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-indices = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-elections-phragmen = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-proxy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-informant = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
beefy-gadget-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
beefy-gadget = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-executor-wasmtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-executor-common = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-executor-wasmi = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-executor = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-network-gossip = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-transaction-pool-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-client-db = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-sync-state-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-network = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-utils = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-block-builder-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-rpc-server = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-light = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-client-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-service = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-rpc-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-chain-spec-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-chain-spec = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-proposer-metrics = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-peerset = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-basic-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-state-db = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-allocator = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-uncles = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-epochs = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sc-telemetry = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
fork-tree = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
substrate-wasm-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
try-runtime-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
frame-benchmarking-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
remote-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
substrate-build-script-utils = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
substrate-test-client = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-panic-handler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-inherents = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-storage = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-std = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
beefy-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-version-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-version = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-database = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-debug-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-session = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
extrinsic-shuffler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
ver-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-core = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-keyring = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-tasks = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-runtime-interface = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-arithmetic = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-api-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-state-machine = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-wasm-interface = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-npos-elections = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-application-crypto = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-serializer = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-staking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-trie = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-blockchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-consensus-vrf = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}
sp-io = { git = "https://github.com/mangata-finance//substrate", branch = "feature/council-as-staking-fallback"}